--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,7 +4,7 @@
   background-color: #fff;
   position: absolute;
   right: 60px;
-  top: 38px;
+  top: 30px;
 }
 
 .logo {
@@ -14,7 +14,7 @@
   z-index: 100;
   position: absolute;
   right: 25px;
-  top: 20px;
+  top: 11px;
   cursor: pointer;
   transition: transform 0.3s ease;
 }
@@ -22,4 +22,17 @@
 .logo:hover {
   transform: scale(1.2);
   border-radius: 1rem;
+}
+
+@media screen and (min-width: 1200px) {
+  .background {
+    
+    right: 15rem;
+  
+  }
+  
+  .logo {
+    right: 13rem;
+    
+  }
 }
