--- a/src/components/Landing.module.css
+++ b/src/components/Landing.module.css
@@ -1,7 +1,15 @@
 .main {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
-  margin-top: 5.5rem;
+  margin-top: 6rem;
+  gap: 1.5rem;
   
+}
+
+@media screen and (min-width: 1200px) {
+  .main {
+  gap: 5rem;
+    
+  }
 }
