--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -19,7 +19,7 @@
 }
 
 .content {
-    padding: 16px;
+    padding: 25px;
 }
 
 .content h2 {
@@ -34,20 +34,21 @@
   margin: 8px 0 16px;
 }
 
-.content button {
+.content .button {
     background-color: var(--complementary-color);
     color: #fff;
     border: none;
     padding: 8px 16px;
-    margin: 0.5rem;
+    /* margin: 0.5rem; */
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s ease;
+    text-decoration: none;
   
 }
 
-.content button:hover {
+.content .button:hover {
     background-color: var(--secondary-color);
     color: var(--primary-color);
 }
