--- a/src/styles/Anleitung.module.css
+++ b/src/styles/Anleitung.module.css
@@ -9,12 +9,50 @@
   .wrapper h2 {
     display: block;
     margin-bottom: 0.05rem;
-  }
-  
-  .wrapper p {
-    display: block;
-    width: 100%;
-    padding: 0.5rem;
+    color: var(--tertiar-color)
+
   }
 
+  ul {
+    list-style: none;
+    margin: 2%;
+  }
+
+  li svg {
+    color: var(--tertiar-color)
+  }
+
+  span {
+    font-size: large;
+    text-decoration: underline;
+
+  color: var(--tertiar-color);
+  }
+  
+  .anleitung {
+    overflow-y: auto;
+    max-height: calc(80vh - 40px);
+
+  }
+
+  .anleitung p {
+    padding: 0.5rem;
+  }
+  .anleitung > section:nth-of-type(2) > span {
+  text-decoration: none;
+  font-size: small;
+ } 
+  
+ span a {
+  color: var(--complementary-color)
+ }
+
+
+ @media screen and (min-width: 992px) {
+  .anleitung {
+    display: flex;
+    flex: column wrap;
+  
+  }
+}
   
