alert vor piratekarte noch ändern

--- a/src/styles/ButtonGroup.module.css
+++ b/src/styles/ButtonGroup.module.css
@@ -3,7 +3,7 @@
     gap: 0.5rem;
     /* border: 2px solid red; */
     position: absolute;
-    bottom: 10%;
+    bottom: -50px;
     z-index: 10;
     
 }
