--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,11 @@
   --secondary-color: #D4F1F4; 
   --tertiar-color: #0d98ba; 
   --complementary-color: #e68519;
-  --spieler1:#7700ff;
-  --spieler2:#9233FF;
-
+  /* --spieler1:#7700ff; */
+  --spieler1:#59b4ce;
+  /* --spieler2:#9233FF; */
+  /* --spieler2: #086f88; */
+--spieler2: #0c5e75;
   --shadow: rgba(9, 99, 121, 0.428);
   --font-size-base: 16px;
   --font-family-base: 'merri', sans-serif;
