--- a/src/styles/Anleitung.module.css
+++ b/src/styles/Anleitung.module.css
@@ -4,18 +4,22 @@
     padding: 1rem;
     width: 100%;
 
+    border-radius: 6px;
+    
+
   }
+
   
-  .wrapper h2 {
-    display: block;
-    margin-bottom: 0.05rem;
-    color: var(--tertiar-color)
+  .wrapper .header {
+    display: flex;
+     justify-content: space-between; 
+    /* border: 1px solid red; */
 
   }
 
   ul {
     list-style: none;
-    margin: 2%;
+    margin-bottom: 2%;
   }
 
   li svg {
@@ -29,31 +33,16 @@
   color: var(--tertiar-color);
   }
   
-  .anleitung {
-    overflow-y: auto;
-    max-height: calc(80vh - 40px);
-
+ .wrapper section:nth-last-of-type(1) > span {
+    font-size: smaller;
+    display: block;
+    text-align: right;
+    margin-top: 0.5rem;
   }
-
-  .anleitung p {
-    padding: 0.5rem;
-  }
-  .anleitung > section:nth-of-type(2) > span {
-  text-decoration: none;
-  font-size: small;
- } 
-  
  span a {
   color: var(--complementary-color);
 
  }
 
 
- @media screen and (min-width: 992px) {
-  .anleitung {
-    display: flex;
-    flex: column wrap;
-  
-  }
-}
-  
+ 
