--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: flex-start;
     gap: 1rem;
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
   }
   
   .actions .button {
