--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -11,7 +11,7 @@
   height: 80px;
   width: 100px;
   object-fit: contain;
-  z-index: 100;
+  /* z-index: 100; */
   position: absolute;
   right: 25px;
   top: 11px;
