--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -3,9 +3,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
+    /* overflow: scroll; */
+
   }
   
   .modal {
@@ -13,25 +15,27 @@
     border-radius: 6px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     padding: 0;
-    overflow: hidden;
+    /* overflow: scroll; */
     z-index: 1;
     margin: 0% 5%; 
+  
   }
 
-/* 
+
+ 
   @media screen and (min-width: 768px) {
     .modal {
-      margin: 15% 5%; 
+      margin: -5% 5%; 
     }
   }  
 
-  @media screen and (min-width: 1200px) {
+  /* @media screen and (min-width: 1200px) {
     .modal {
-      margin: 10% 5%; 
+
     }
-  }  
+  }   */
   
-  @media screen and (min-width: 1400px) {
+ /* @media screen and (min-width: 1400px) {
     .modal {
       margin: 5% 5%; 
     }
