--- a/src/styles/Spielfeld.module.css
+++ b/src/styles/Spielfeld.module.css
@@ -2,7 +2,7 @@
     display: flex;
     /* justify-content: center; */
     flex-wrap: wrap; 
-    margin-top: 3rem;
+    margin-top: 4rem;
     /* gap: 1.5rem; */
     justify-content: space-around;
     /* border: 2px solid red; */
@@ -47,7 +47,7 @@
   }
 
   .schiffe div {
-    border: 2px dotted var(--secondary-color);
+    border: 1px dotted var(--primary-color);
     height: 150px;
     width: 150px;
     object-fit: contain;
